...
        <ExternalTouchableLink
          as={LinkInsideText}
          wording="contacter le support"
          externalNav={{ url: env.SUPPORT_ACCOUNT_ISSUES_FORM }}
          accessibilityRole={AccessibilityRole.LINK}
          justifyContent="flex-start"
          onBeforeNavigate={() => analytics.logHasClickedContactForm('AccessibilityEngagement')}
        />
      </StyledBodyBeforeButtonText>
      <StyledBodyAccentXs>
        Vous pouvez retrouver également toutes nos fiches d’aide pour vous inscrire sur le pass
        Culture directement dans{' '}
        <ExternalTouchableLink
...
