...

export function RecommendedPaths() {
  const { goBack } = useGoBack(...getProfileHookConfig('Accessibility'))
  const groupLabel = 'Méthodes pour obtenir le crédit'
  return (
    <PageWithHeader
      title="Parcours recommandés web"
      onGoBack={goBack}
      scrollChildren={
        <React.Fragment>
          <Typo.Body>
            En complément de la mise en conformité du pass Culture au regard des critères du RGAA
            qui reste partielle, les équipes du pass Culture se sont attachées à travailler des
...
