...
                  onPress={handlePressFollow}
                />
              ) : null}
            </ArtistHeader>
            {capitalizedDescriptionWithDot ? (
              <Description gap={1}>
                <Typo.BodyAccent>À propos</Typo.BodyAccent>
                <CollapsibleText
                  text={capitalizedDescriptionWithDot}
                  onAdditionalPress={onExpandBioPress}>
                  {artist.descriptionSource && isValidWikipediaUrl(artist.descriptionSource) ? (
                    <ViewGap gap={1}>
                      <Credit accessibilityLabel={creditAccessibilityLabel.titleText}>
...
