appId: ${MAESTRO_APP_ID}
---
- tapOn: 'Accessibilité'

- assertVisible: 'Accessibilité'
- tapOn:
    text: 'Les engagements du pass Culture'
    index: 0

- assertVisible: 'Les engagements du pass Culture'
- assertVisible:
    id: 'AccessibilityEngagement'

- runFlow: # Si cloud
    when:
      notVisible:
        id: 'com.android.systemui:id/back'
    commands:
      - pressKey: back

- tapOn:
    id: 'com.android.systemui:id/back'
    optional: true

- tapOn:
    text: 'Parcours recommandés'
    index: 1
- assertVisible: 'Parcours recommandés'
- runFlow: # Si cloud
    when:
      notVisible:
        id: 'com.android.systemui:id/back'
    commands:
      - pressKey: back

- tapOn:
    id: 'com.android.systemui:id/back'
    optional: true


- tapOn:
    text: 'Déclaration d’accessibilité'
    index: 1
- assertVisible:
    id: 'AccessibilityDeclaration'
- runFlow: # Si cloud
    when:
      notVisible:
        id: 'com.android.systemui:id/back'
    commands:
      - pressKey: back

- tapOn:
    id: 'com.android.systemui:id/back'
    optional: true


- tapOn:
    text: 'Schéma pluriannuel'
    index: 1
- assertVisible: 'Schéma pluriannuel'
- assertVisible:
    id: 'AccessibilityActionPlan'
- runFlow: # Si cloud
    when:
      notVisible:
        id: 'com.android.systemui:id/back'
    commands:
      - pressKey: back

- tapOn:
    id: 'com.android.systemui:id/back'
    optional: true


- runFlow: # Si cloud
    when:
      notVisible:
        id: 'com.android.systemui:id/back'
    commands:
      - pressKey: back

- tapOn:
    id: 'com.android.systemui:id/back'
    optional: true

